--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Compiled class file
 *.class
 
+#folders
+actions-runner/*
+
 # Log file
 *.log
 
@@ -22,3 +25,4 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+api-gateway/gitlab_runner/Dockerfile
