--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -5,7 +5,6 @@ logging.level.root=INFO
 logging.level.org.springframework.cloud.gateway.route.RouteDefinitionLocator = INFO
 logging.level.org.springframework.cloud.gateway= TRACE
 
-
 ## Discovery client
 logging.level.com.apigateway= DEBUG
 management.endpoints.web.exposure.include=*
@@ -15,6 +14,11 @@ spring.cloud.gateway.discovery.locator.lowerCaseServiceId=true
 # Zipkin
 #spring.zipkin.base-url=http://localhost:9411/
 spring.sleuth.sampler.probability=1.0
+
+
+
+spring.cloud.gateway.globalcors.corsConfigurations['[/**]'].allowedOrigins=https://localhost:3000
+spring.cloud.gateway.globalcors.corsConfigurations['[/**]'].allowedMethods=POST
 
 ##Security
 #spring.security.oauth2.resourceserver.jwt.jwk-set-uri = http://keycloak:8080/realms/master/protocol/openid-connect/certs
