--- a/gitlab-ci.yml
+++ b/gitlab-ci.yml
@@ -24,6 +24,8 @@ stages:          # List of stages for jobs, and their order of execution
 
 build-api-gateway: # This job runs in the build stage,which runs first.
   stage: build
+  runs-on:
+    - self-hosted
   script:
     - echo "Running Build"
     - echo $JAVA_HOME
@@ -38,6 +40,8 @@ build-api-gateway: # This job runs in the build stage,which runs first.
 
 unit-test-job:   # This job runs in the test stage.
   stage: test    # It only starts when the job in the build stage completes successfully.
+  runs-on:
+    - self-hosted
   script:
     - echo "Running unit tests... This will take about 60 seconds."
     - cd api-gateway
